Fix horizontal scroll

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -102,7 +102,7 @@ img {
 }
 
 .sticker-buttons::-webkit-scrollbar:vertical {
-  width: 87.5px;
+  width: 8px;
 }
 
 .sticker-buttons::-webkit-scrollbar:horizontal {
